syntax = "proto3";

package arithmetic;

// https://github.com/protocolbuffers/protobuf/blob/main/src/google/protobuf/wrappers.proto
import "google/protobuf/wrappers.proto";
import "common.proto";

enum OrderEnum {
  INC = 0;
  DEC = 1;
}

message SortMsg {
  repeated sint64 values = 1;
  OrderEnum order = 2;
}

service ArithmeticService {
  rpc Sum(IntArray) returns (google.protobuf.Int64Value) {}
  rpc Multiply(IntArray) returns (google.protobuf.Int64Value) {}
  rpc Sort(SortMsg) returns (IntArray) {}
}