syntax = "proto3";

message IntArray {
  repeated sint64 values = 1;
}